fixed security issue & fixed link(color contrast)

--- a/public/style.css
+++ b/public/style.css
@@ -45,7 +45,8 @@
     --yellow: #f1c40f;
     --green: #33d6a6;
     --cyan: #5bc0de;
-    --blue: #338eda;
+    --link-hover: #791c29;
+    --navy: #000080;
     --twitter: #1da1f2;
     --facebook: #3b5998;
     --instagram: #e1306c;
@@ -64,6 +65,7 @@
 body {
     font-family: "Phantom Sans", -apple-system, system-ui, BlinkMacSystemFont,
         "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            color: var(--black);
 }
 
 /*@media screen and (min-width: 32em) {
@@ -92,16 +94,7 @@ body {
   padding-bottom: 16px;
 }*/
 
-body {
-    color: var(--black);
-}
 
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6,
 h1,
 h2,
 h3,
@@ -112,6 +105,7 @@ h6 {
     font-weight: 700;
     line-height: 1.2;
 }
+
 .title {
     color: var(--red);
     font-size: 48px;
@@ -119,16 +113,21 @@ h6 {
 
 .jumbotron,
 .container-fluid {
-    background-color: #f9fafc;
+    background-color: #ffffff;
 }
 
+
 a {
-    color: var(--blue);
-    text-decoration: underline;
+    font-weight: bold;
+    color: var(--red);
+    transition: 310ms;
 }
+
 a:hover {
-    color: var(--blue);
+    color: var(--link-hover);
+    text-decoration: none;
 }
+
 
 pre {
     background-color: var(--smoke);
